--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,9 @@
     <version>3.0.0-M5</version>
     <configuration>
    
+ <threadCount>4</threadCount>
+    <parallel>methods</parallel>
+  <perCoreThreadCount>false</perCoreThreadCount>
   
   
     <includes>
