--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
     <version>4.1.2</version>
 </dependency>
 
+<dependency>
+			<groupId>tech.grasshopper</groupId>
+			<artifactId>extentreports-cucumber6-adapter</artifactId>
+			<version>2.6.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
